bugfix: fix number truncation in code input

--- a/src/components/code-input/code-input.scss
+++ b/src/components/code-input/code-input.scss
@@ -32,7 +32,7 @@
   &__input {
     text-align: center;
     width: 32px;
-    height: 33px;
+    height: 36px;
     background-color: transparent;
     border: none;
     caret-color: var(--dt-kingBlue-wt-kingBlueLight);
